@@ -51,6 +51,7 @@ https://github.com/elastic/beats/compare/v6.4.0...6.x[Check the HEAD diff]
 - Fix bug in loading dashboards from zip file. {issue}8051[8051]
 - Fix in-cluster kubernetes configuration on IPv6. {pull}8754[8754]
 - The export config subcommand should not display real value for field reference. {pull}8769[8769]
+- The setup command will not fail if no dashboard is available to import. {pull}8977[8977]
 
 *Auditbeat*
 
